[gd_scene load_steps=9 format=3 uid="uid://b7413gglttkr3"]

[ext_resource type="Script" uid="uid://cvpjjyl8sbjef" path="res://level.gd" id="1_8niqe"]
[ext_resource type="Script" uid="uid://ch05bgwr18cx6" path="res://bullet_pool.gd" id="2_1gagn"]
[ext_resource type="PackedScene" uid="uid://cea82s1gm355y" path="res://bullet.tscn" id="3_8g7xs"]
[ext_resource type="Texture2D" uid="uid://fuidd5ftndwu" path="res://background.png" id="4_0b4ue"]
[ext_resource type="PackedScene" uid="uid://hua8kq4frfmk" path="res://bullet_slot_manager.tscn" id="5_f2txt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0b4ue"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(120, 920)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(1320, 120)

[node name="level" type="Node2D"]
script = ExtResource("1_8niqe")

[node name="bounds" type="StaticBody2D" parent="." groups=["bounds"]]
collision_layer = 8
collision_mask = 6
physics_material_override = SubResource("PhysicsMaterial_0b4ue")

[node name="LeftWall" type="CollisionShape2D" parent="bounds"]
position = Vector2(-60, 400)
shape = SubResource("RectangleShape2D_1")

[node name="RightWall" type="CollisionShape2D" parent="bounds"]
position = Vector2(1260, 400)
shape = SubResource("RectangleShape2D_1")

[node name="TopWall" type="CollisionShape2D" parent="bounds"]
position = Vector2(600, -60)
shape = SubResource("RectangleShape2D_2")

[node name="BottomWall" type="CollisionShape2D" parent="bounds"]
position = Vector2(600, 860)
shape = SubResource("RectangleShape2D_2")

[node name="BulletPool" type="Node" parent="."]
script = ExtResource("2_1gagn")
bullet_scene = ExtResource("3_8g7xs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(600, 400)
texture = ExtResource("4_0b4ue")

[node name="GameOverLabel" type="Label" parent="."]
process_mode = 3
visible = false
offset_left = 135.0
offset_top = 180.0
offset_right = 1074.0
offset_bottom = 623.0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameWinLabel" type="Label" parent="."]
process_mode = 3
visible = false
offset_left = 135.0
offset_top = 180.0
offset_right = 1074.0
offset_bottom = 623.0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 100
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotManager" parent="." instance=ExtResource("5_f2txt")]

[node name="bounds2" type="Area2D" parent="." groups=["bounds"]]
position = Vector2(-1, 0)
collision_layer = 8
collision_mask = 6

[node name="LeftWall" type="CollisionShape2D" parent="bounds2"]
position = Vector2(-60, 400)
shape = SubResource("RectangleShape2D_1")

[node name="RightWall" type="CollisionShape2D" parent="bounds2"]
position = Vector2(1260, 400)
shape = SubResource("RectangleShape2D_1")

[node name="TopWall" type="CollisionShape2D" parent="bounds2"]
position = Vector2(600, -60)
shape = SubResource("RectangleShape2D_2")

[node name="BottomWall" type="CollisionShape2D" parent="bounds2"]
position = Vector2(600, 860)
shape = SubResource("RectangleShape2D_2")

[node name="CountdownTimer" type="Timer" parent="."]
